--- a/components/organisms/header/header.style.scss
+++ b/components/organisms/header/header.style.scss
@@ -139,6 +139,7 @@ $transition-speed: 0.25s;
       align-items: center;
       position: relative;
       z-index: 1;
+      text-decoration: none;
     }
 
     &__nav-link {
